@startuml ocp_violation
!theme plain
skinparam classAttributeIconSize 0

title Naruszenie OCP - Modyfikacja przy każdym rozszerzeniu

class AreaCalculator {
  + calculateArea(Object): double
}

class Rectangle {
  - width: double
  - height: double
  --
  + getWidth(): double
  + getHeight(): double
}

class Circle {
  - radius: double
  --
  + getRadius(): double
}

note right of AreaCalculator::calculateArea
  if (shape instanceof Rectangle) {
      Rectangle r = (Rectangle) shape;
      return r.getWidth() * r.getHeight();
  } else if (shape instanceof Circle) {
      Circle c = (Circle) shape;
      return Math.PI * c.getRadius() * c.getRadius();
  }

  ❌ Dodanie nowego kształtu wymaga
  MODYFIKACJI tej metody!
end note

AreaCalculator ..> Rectangle : <<instanceof>>
AreaCalculator ..> Circle : <<instanceof>>

note bottom of AreaCalculator
  PROBLEMY:
  • Modyfikacja kodu przy każdym nowym kształcie
  • Naruszenie SRP (zna wszystkie figury)
  • Trudne testowanie
  • Wysokie ryzyko regresji
end note

@enduml


